<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RpiFace</string>
    <string name="menu_settings">Configuración</string>
    <string name="title_activity_welcome">Rpi-face</string>
    <string name="speak">Hablar</string>
    <string name="move">Mover</string>
    <string name="vote">Votar</string>
    <string name="happy">Contento</string>
    <string name="sad">Triste</string>
    <string name="angry">Enfadado</string>
    <string name="surprised">Sorprendido</string>
    <string name="neutral">Neutral</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="voice">Voz</string>
    <string name="text">Texto</string>
    <string name="record">Grabar</string>
    <string name="send">Enviar</string>
    <string name="welcome">Bienvenido a Rpi-face</string>
    <string name="welcome_image_description">Imagen de bienvenida</string>
    <string name="exit">Salir</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_preferences">Preferencias</string>
    <string name="prefs_label_url">"URL del servidor: "</string>
    <string name="prefs_label_path">"Path relativo: "</string>
    <string name="prefs_label_port">"Puerto: "</string>
    <string name="prefs_button_ok">Aceptar</string>
    <string name="prefs_button_cancel">Cancelar</string>
    <string name="prefs_error_port">El puerto debe ser un número entero entre 0 y 65535</string>
    <string name="prefs_button_restoreDefault">Restablecer predeterminados</string>
    <string name="prefs_label_defaultMode">Modo de enviar mensajes predeterminado:</string>
    <string name="prefs_radio_textMode">Texto</string>
    <string name="prefs_radio_voiceMode">Voz</string>
    <string name="editText_text_hint">Introduzca el texto a enviar a la cara</string>
    <string name="record_button_description">Botón de grabar</string>

</resources>