<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_voice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voice" />

        <Button
            android:id="@+id/button_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/send" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/prefs_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_send"
        android:layout_below="@id/layout_mode"
        android:background="@android:color/black" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_record"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/record" />

            <EditText
                android:id="@+id/editText_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editText_text_hint"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>