<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PreferencesActivity" >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
	    <TextView android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:text="@string/prefs_label_url"/>
	    <EditText android:id="@+id/prefs_field_url"
	        android:inputType="textUri"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:background="@android:color/white"
	         />   
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
	    <TextView android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:text="@string/prefs_label_port"/>
	    <EditText android:id="@+id/prefs_field_port"
	        android:inputType="number"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:background="@android:color/white" />   
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
	    <TextView android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:text="@string/prefs_label_path"/>
	    <EditText android:id="@+id/prefs_field_path"
	        android:inputType="text"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:background="@android:color/white" />   
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="horizontal">
	    <Button android:id="@+id/prefs_button_ok"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:text="@string/prefs_button_ok" />  
	    <Button android:id="@+id/prefs_button_cancel"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:text="@string/prefs_button_cancel" />  
	</LinearLayout>

</LinearLayout>
</ScrollView>