<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_hablar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/dialog"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:text="@string/speak"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_mover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_menu_contact"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:text="@string/move"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_votar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawableLeft="@drawable/ic_menu_mark"
        android:drawablePadding="30dp"
        android:gravity="left|center_vertical"
        android:text="@string/vote"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

</LinearLayout>